//
// Created by luopan on 2020/4/14.
//

#ifndef FFMPEG_GLVIDEOVIEW_H
#define FFMPEG_GLVIDEOVIEW_H


class GLVideoView {

};


#endif //FFMPEG_GLVIDEOVIEW_H
