//
// Created by luopan on 2020/4/14.
//

#ifndef FFMPEG_IVIDEOVIEW_H
#define FFMPEG_IVIDEOVIEW_H


class IVideoView {

};


#endif //FFMPEG_IVIDEOVIEW_H
